Tiny bug fixes in alignment and div sizes.

--- a/style.css
+++ b/style.css
@@ -76,20 +76,41 @@ nav ul li a:hover {
 #section1 {
     width: 80%;
     background-color: #003366;
-    display: flex;
+    /*margin: 0 auto;*/
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-#about {
-    width: 45%;
+.section-title {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; /* Align items to the top */
+}
+
+.section {
+    width: 48%; /* Adjusted width */
     background-color: #F5F5F5;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 #avatar {
-    width: 25%;
-    justify-content: center;
-    align-content: center;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    width: 40%;
+    margin-right: 5%;
+}
+#about {
+    width: 40%;
+    margin-right: 5%;
 }
 
 .image_info {
@@ -99,13 +120,22 @@ nav ul li a:hover {
 #image {
     width: 150px;
     height: auto;
-    padding: 20%;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
+
+
+
 
 #skills {
     width: 80%;
     background-color: #003366;
     color: #fff;
+}
+
+#skills h2 {
+    color: #fff;
+    text-align: center;
 }
 
 .skills-container {
@@ -144,9 +174,11 @@ nav ul li a:hover {
 /* Styling for the portfolio/projects section */
 #portfolio {
     background-color: #003366;
-    padding: 40px 5%; /* Keep vertical padding as 40px, and horizontal padding as 5% to avoid breaking*/
+    padding: 40px 2%; /* Keep vertical padding as 40px, and horizontal padding as 5% to avoid breaking*/
     margin: 0 auto; /* Center the div horizontally */
     max-width: 1200px;
+    width: 100%;
+
 }
 
 /* Styling for the projects heading */
@@ -284,4 +316,3 @@ footer {
     bottom: 0;
     padding: 10px 0;
 }
-
